# rusty-pinger

./: .gitignore  Cargo.toml  README.md  access-credentials-2022-08-01T16_53_35.753Z.txt  build_linux.sh  s3-credentials-2022-08-01T17_11_29.069Z.txt  structure.sql
.github/workflows/: rust.yml
src/: main.rs
