[package]
name = "rusty-pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
pjson = "0.2.2"
futures = "0.3.21"
async-minecraft-ping = "0.8.0"
tokio-postgres = "0.7.6"

[target.x86_64-unknown-linux-gnu]
linker = "gcc"
